k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: workpace-loadbalancer
  namespace: workpace
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "1"
spec:
  type: LoadBalancer
  selector:
    app: workpace-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
  loadBalancerSourceRanges:
    - 0.0.0.0/0  # Allow traffic from anywhere (adjust as needed)
