k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workpace-service
  namespace: workpace
spec:
  selector:
    app: workpace-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
