k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workpace-ingress
  namespace: workpace
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - workpace.io
        - www.workpace.io
      secretName: workpace-tls
  rules:
    - host: workpace.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workpace-service
                port:
                  number: 80
    - host: www.workpace.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workpace-service
                port:
                  number: 80
